fix "col-7" text align

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@
     border: 0;
 }
 
-.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-8, .col-12 {
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-12 {
     display: flex;
     justify-content: center;
     align-items: center;
